--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hvilken farge er det?</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="libs/confetti.browser.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,7 @@
             <img id="color-image" src="" alt="Color">
         </div>
         <div id="message"></div>
+        <div id="lives">Vidas restantes: 3</div> <!-- Sección para mostrar las vidas restantes -->
         <div id="input-container">
             <input type="text" id="guess-input" placeholder="Escribe tu respuesta aquí">
             <button id="guess-button">Adivinar</button>
@@ -23,7 +24,7 @@
         <div id="keyboard-container"></div>
         <button id="restart-button" style="display: none;">Reiniciar</button>
     </div>
-
+    <audio id="background-music" src="assets/background-music.mp3" loop></audio>
     <script src="script.js"></script>
 </body>
 </html>
